removed silly trial

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="full-width">
             <div class="half-width">
-                <h1>Cory Austen | Trial</h1>
+                <h1>Cory Austen</h1>
             </div>
             <div class="half-width">
                 <nav>
