update colors for wave

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="full-width">
             <div class="half-width">
-                <h1>Cory Austen</h1>
+                <h1>Jubilee Austen</h1>
             </div>
             <div class="half-width">
                 <nav>
@@ -57,20 +57,17 @@
                 <div class="third-width">
                     <img src="img/file-code@2x.png" alt="HTML icon" class="work-icons" />
                     <h3>Hand-Coded HTML</h3>
-                    <p>My focus is writing clean, well formatted, semantic HTML5 by hand to make sure that the content
-                        is easy to read, easy to collaborate, trouble-shoot and accessible.</p>
+                    <p>My focus is writing clean, well formatted, semantic HTML5 by hand to make sure that the content is easy to read, easy to collaborate, trouble-shoot and accessible.</p>
                 </div>
                 <div class="third-width">
                     <img src="img/css3@2x.png" alt="CSS icon" class="work-icons" />
                     <h3>Well-Organized CSS</h3>
-                    <p>I pride myself on writing CSS that is easy to read and build on. I focus on keeping my CSS lean
-                        and fast to load, and I make it a habit to stay up to date on current best practices.</p>
+                    <p>I pride myself on writing CSS that is easy to read and build on. I keep my CSS lean and fast to load, and I make it a habit to stay up to date on current best-practices.</p>
                 </div>
                 <div class="third-width">
                     <img src="img/pencil-alt@2x.png" alt="Pencil icon" class="work-icons" />
                     <h3>Ease Converting Designs into Code</h3>
-                    <p>You can trust me to take a designer's PSD and quickly &amp; accurately convert it into a webpage
-                        that is pixel-perfect match.</p>
+                    <p>You can trust me to take a professional design and style guide and quickly and accurately convert it into a webpage that is a pixel perfect match.</p>
                 </div>
             </div>
         </section>
@@ -78,12 +75,12 @@
         <footer id="contact">
             <div class="full-width">
                 <div class="half-width">
-                    <img src="img/rawpixel-603646-unsplash.jpg" id="contact-img" alt="my contact image" />
+                    <img src="img/christopher-gower-m_HRfLhgABo-unsplash.jpg" id="contact-img" alt="my contact image" />
                 </div>
                 <div class="half-width">
                     <h2>Like what you see?</h2>
                     <h3 id="email-header">Let's meet for a cup of coffee.</h3>
-                    <a href="mailto:hi@jubileeausten.com"><img src="img/envelope@2x.png" id="envelope"
+                    <a href="mailto:hi@jubileeausten.com"><img src="img/envelope2.png" id="envelope"
                             alt="envelope icon" class="contact-icons" />hi [@] jubileeausten.com</a>
                     <h3 id="socialmedia-header">Or, find me on the interwebs</h3>
                     <ul>
