--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <footer id="contact">
             <div class="full-width">
                 <div class="half-width">
-                    <img src="img/christopher-gower-m_HRfLhgABo-unsplash.jpg" id="contact-img" alt="my contact image" />
+                    <img src="img/christopher-gower-m_HRfLhgABo-unsplash.jpg" id="contact-img" alt="my desk setup" />
                 </div>
                 <div class="half-width">
                     <h2>Like what you see?</h2>
